# prim-instances

./: ChangeLog.md  README.md  prim-instances.cabal
src/Data/Primitive/: Instances.hs
test/: Spec.hs
