name:                prim-instances
version:             0.1.0.0
synopsis:            prim typeclass instances
-- description:
homepage:            https://github.com/chessai/prim-instances.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           2018 (c) chessai
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Primitive.Instances
  build-depends:       base >=4.7 && <4.13, ghc-prim, primitive >= 0.6.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
